@@ -1,12 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.47 2005/01/18 04:17:11 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.48 2005/01/18 06:57:40 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
 
   17 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
   Added blurb about me being lazy to Welcome. Turned off pretend mode for
-  gtkfe
+  gtkfe (no more training wheels!). Added mount point/opts fields to
+  Partitioning.py. "fixed" invalid IP address problem in Networking.py
 
   17 Jan 2005; John Laliberte <allanonl@bu.edu>
   Networking.py - changed from combobox to comboentrybox.  Redid some of the
